# Critical_Link_board_CPU_FPGA

./: README.md
Applicazione/: CMakeLists.txt  main.cpp
FPGA/Sources/: rx_ringBuffer.vhd  single_port_ramsingle_port_ram.vhd  sobel_core.vhd  tx_ringBuffer.vhd
FPGA/Testbenches/: tb_rx_ringBuffer.vhd  tb_sobel_core.vhd  tb_tx_ringBuffer.vhd  testbench.vhd
Kernel_Module/: Makefile  circular_buffer.h  msgdma.c  msgdma.h  socfpga_cyclone5_de1_sockit.dts  two_way_circular_buffer.h
